tests/ui/min_max.stderr
error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:15:5
   |
15 |     min(1, max(3, x));
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/min_max.rs:4:9
   |
4  | #![deny(clippy)]
   |         ^^^^^^

error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:16:5
   |
16 |     min(max(3, x), 1);
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]

error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:17:5
   |
17 |     max(min(x, 1), 3);
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]

error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:18:5
   |
18 |     max(3, min(x, 1));
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]

error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:20:5
   |
20 |     my_max(3, my_min(x, 1));
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]

error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:29:5
   |
29 |     min("Apple", max("Zoo", s));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]

error: this min/max combination leads to constant result
  --> $DIR/min_max.rs:30:5
   |
30 |     max(min(s, "Apple"), "Zoo");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(min_max)] implied by #[deny(clippy)]

error: aborting due to 7 previous errors

